[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/LevelBlocks/Material_003.material" type="Material" id=1]
[ext_resource path="res://Objects/LevelBlocks/shrinkingPlat.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
resource_name = "smallPlat_Cube001"
surfaces/0 = {
"aabb": AABB( -1, -0.296847, -1, 2.00001, 0.585867, 2 ),
"array_data": PoolByteArray( 0, 0, 128, 63, 42, 249, 147, 62, 0, 0, 128, 191, 127, 127, 0, 127, 245, 59, 247, 59, 0, 0, 128, 63, 42, 249, 147, 62, 0, 0, 128, 191, 0, 127, 129, 63, 245, 59, 247, 59, 0, 0, 128, 63, 42, 249, 147, 62, 0, 0, 128, 191, 127, 0, 0, 127, 245, 59, 247, 59, 0, 0, 128, 63, 86, 252, 151, 190, 0, 0, 128, 191, 0, 129, 127, 63, 125, 29, 247, 59, 0, 0, 128, 63, 86, 252, 151, 190, 0, 0, 128, 191, 127, 127, 0, 127, 125, 29, 247, 59, 0, 0, 128, 63, 86, 252, 151, 190, 0, 0, 128, 191, 127, 0, 0, 127, 125, 29, 247, 59, 0, 0, 128, 63, 42, 249, 147, 62, 0, 0, 128, 63, 0, 0, 0, 127, 245, 59, 251, 30, 0, 0, 128, 63, 42, 249, 147, 62, 0, 0, 128, 63, 0, 127, 129, 63, 245, 59, 251, 30, 0, 0, 128, 63, 42, 249, 147, 62, 0, 0, 128, 63, 127, 0, 0, 127, 245, 59, 251, 30, 0, 0, 128, 63, 86, 252, 151, 190, 0, 0, 128, 63, 0, 129, 127, 63, 125, 29, 251, 30, 0, 0, 128, 63, 86, 252, 151, 190, 0, 0, 128, 63, 0, 0, 0, 127, 125, 29, 251, 30, 0, 0, 128, 63, 86, 252, 151, 190, 0, 0, 128, 63, 127, 0, 0, 127, 125, 29, 251, 30, 0, 0, 128, 191, 42, 249, 147, 62, 0, 0, 128, 191, 129, 0, 0, 127, 245, 59, 241, 63, 0, 0, 128, 191, 42, 249, 147, 62, 0, 0, 128, 191, 127, 127, 0, 127, 245, 59, 241, 63, 0, 0, 128, 191, 42, 249, 147, 62, 0, 0, 128, 191, 0, 127, 129, 63, 239, 63, 247, 59, 0, 0, 128, 191, 86, 252, 151, 190, 0, 0, 128, 191, 129, 0, 0, 127, 125, 29, 241, 63, 0, 0, 128, 191, 86, 252, 151, 190, 0, 0, 128, 191, 0, 129, 127, 63, 223, 187, 247, 59, 0, 0, 128, 191, 86, 252, 151, 190, 0, 0, 128, 191, 127, 127, 0, 127, 125, 29, 241, 63, 0, 0, 128, 191, 42, 249, 147, 62, 0, 0, 128, 63, 129, 0, 0, 127, 245, 59, 243, 65, 0, 0, 128, 191, 42, 249, 147, 62, 0, 0, 128, 63, 0, 0, 0, 127, 245, 59, 220, 187, 0, 0, 128, 191, 42, 249, 147, 62, 0, 0, 128, 63, 0, 127, 129, 63, 239, 63, 251, 30, 0, 0, 128, 191, 86, 252, 151, 190, 0, 0, 128, 63, 129, 0, 0, 127, 125, 29, 243, 65, 0, 0, 128, 191, 86, 252, 151, 190, 0, 0, 128, 63, 0, 129, 127, 63, 223, 187, 251, 30, 0, 0, 128, 191, 86, 252, 151, 190, 0, 0, 128, 63, 0, 0, 0, 127, 125, 29, 220, 187 ),
"array_index_data": PoolByteArray( 1, 0, 20, 0, 14, 0, 1, 0, 7, 0, 20, 0, 10, 0, 19, 0, 6, 0, 10, 0, 23, 0, 19, 0, 21, 0, 12, 0, 18, 0, 21, 0, 15, 0, 12, 0, 16, 0, 9, 0, 3, 0, 16, 0, 22, 0, 9, 0, 5, 0, 8, 0, 2, 0, 5, 0, 11, 0, 8, 0, 17, 0, 0, 0, 13, 0, 17, 0, 4, 0, 0, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.117647, 0.65098, 0.137255, 1 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 1, 0.289, -1, -1, 0.289, 1, -1, 0.289, -1, 1, 0.289, -1, 1, 0.289, 1, -1, 0.289, 1, 1, -0.2968, 1, -1, 0.289, 1, 1, 0.289, 1, 1, -0.2968, 1, -1, -0.2968, 1, -1, 0.289, 1, -1, -0.2968, 1, -1, 0.289, -1, -1, 0.289, 1, -1, -0.2968, 1, -1, -0.2968, -1, -1, 0.289, -1, -1, -0.2968, -1, 1, -0.2968, 1, 1, -0.2968, -1, -1, -0.2968, -1, -1, -0.2968, 1, 1, -0.2968, 1, 1, -0.2968, -1, 1, 0.289, 1, 1, 0.289, -1, 1, -0.2968, -1, 1, -0.2968, 1, 1, 0.289, 1, -1, -0.2968, -1, 1, 0.289, -1, -1, 0.289, -1, -1, -0.2968, -1, 1, -0.2968, -1, 1, 0.289, -1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 0.139795, 1 )

[node name="shrinkingPlat" type="Spatial"]
script = ExtResource( 2 )

[node name="smallPlat" type="Spatial" parent="."]

[node name="Cube" type="MeshInstance" parent="smallPlat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.287809, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="smallPlat/Cube"]

[node name="CollisionShape" type="CollisionShape" parent="smallPlat/Cube/StaticBody"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="smallPlat"]

[node name="CollisionShape" type="CollisionShape" parent="smallPlat/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0434238, 0 )
shape = SubResource( 4 )

[connection signal="body_entered" from="smallPlat/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="smallPlat/Area" to="." method="_on_Area_body_exited"]
